--- a/index.html
+++ b/index.html
@@ -390,6 +390,9 @@ adfadf<br>
 <a href="javascript:RMC.loadpage('other.html');">載入頁面</a><br> 
 <a href="javascript:RMC.changepage('main7');">到載入頁面</a>
 <p>
+<p>
+<a href="load.html">開始載入時</a>
+</p>
 <span class="radio">
 <input type="radio" value="1" id="ra1" name="ra" /><label for="ra1">一</label><input type="radio" value="2" id="ra2" name="ra" /><label for="ra2">二</label><input type="radio" value="3" id="ra3" name="ra" /><label for="ra3">三</label><input type="radio" value="4" id="ra4" name="ra" /><label for="ra4">四</label>
 </span>
