--- a/p1.html
+++ b/p1.html
@@ -2,10 +2,10 @@
 <div class="header">測試一下</div>
 <div class="content">asdfaefiej
 <p>
-<a href="RMC.changepage('vsdtt');">vsdtt</a>
+<a href="javascript:RMC.changepage('vsdtt');">vsdtt</a>
 </p>
 <p>
-<a href="RMC.changepage('vsd');">vsd</a>
+<a href="javascript:RMC.changepage('vsd');">vsd</a>
 </p>
 </div>
 </div>
