--- a/load.html
+++ b/load.html
@@ -15,7 +15,7 @@
 <script>
 RMC.init(function(){
 	
-	RMC.start_load(['p1.html','p2.html'],'vsdxxx');
+	RMC.start_load(['p1.html','p2.html'],'vsdxxx','vvv');
 	//RMC.loadpage('p1.html');
 });
 </script>
