--- a/p1.html
+++ b/p1.html
@@ -1,5 +1,5 @@
 <div class="page" id="vsdxxx">
-<div class="header">測試一下</div>
+<div class="header">測試一下p1</div>
 <div class="content">asdfaefiej
 <p>
 <a href="javascript:RMC.changepage('vsdtt');">vsdtt</a>
@@ -10,7 +10,7 @@
 </div>
 </div>
 <div class="page" id="vsdtt">
-<div class="header nameb"><span class="l-btn" tap="RMC.backpage();">返回</span><span>測試一下v</span></div>
+<div class="header nameb"><span class="l-btn" tap="RMC.backpage();">返回</span><span>測試一下p1v</span></div>
 <div class="content">asdfaefiejcfsdf<br>asdfaefe
 </div>
 </div>
