--- a/index.html
+++ b/index.html
@@ -383,6 +383,10 @@ adfadf<br>
 <a href="javascript:RMC.changepage('main9');">選單3</a><br> 
 <br>
 
+<p>
+<a href="scroll.html">選單初始設定</a>
+</p>
+
 <br>
 <a href="javascript:RMC.changepage('main10');">iscroll 頁面</a><br> 
 <br>
@@ -393,6 +397,8 @@ adfadf<br>
 <p>
 <a href="load.html">開始載入時</a>
 </p>
+
+
 <span class="radio">
 <input type="radio" value="1" id="ra1" name="ra" /><label for="ra1">一</label><input type="radio" value="2" id="ra2" name="ra" /><label for="ra2">二</label><input type="radio" value="3" id="ra3" name="ra" /><label for="ra3">三</label><input type="radio" value="4" id="ra4" name="ra" /><label for="ra4">四</label>
 </span>
