--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <link href="css/rmc3.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/jquery.js"></script>
+<script type="text/javascript" charset="utf-8" src="js/jquery.lazy.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/jquery.touchswipe.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/iscroll.js"></script>
-<script type="text/javascript" charset="utf-8" src="js/jquery.pep.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/rmc3.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/pushmsg.js"></script>
 <script type="text/javascript" charset="utf-8">
@@ -428,6 +428,10 @@ adfadfad<br>
 adfadfad<br>
 adfadfad<br>
 adfadfad<br>
+
+lazy<br>
+<img class="lazy" data-src="images/qqd.jpg" src="" border="0" />
+lazy<br>
 adfadfad<br>
 adfadfad<br>
 adfadf<br>
