--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="css/rmc3.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/jquery.js"></script>
-<script type="text/javascript" charset="utf-8" src="js/jquery.lazy.js"></script>
+<script type="text/javascript" charset="utf-8" src="js/jquery.lazyload.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/jquery.touchswipe.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/iscroll.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/rmc3.js"></script>
@@ -398,6 +398,9 @@ adfadf<br>
 <a href="load.html">開始載入時</a>
 </p>
 
+<span class="checkbox">
+
+</span>
 
 <span class="radio">
 <input type="radio" value="1" id="ra1" name="ra" /><label for="ra1">一</label><input type="radio" value="2" id="ra2" name="ra" /><label for="ra2">二</label><input type="radio" value="3" id="ra3" name="ra" /><label for="ra3">三</label><input type="radio" value="4" id="ra4" name="ra" /><label for="ra4">四</label>
@@ -428,9 +431,9 @@ adfadfad<br>
 adfadfad<br>
 adfadfad<br>
 adfadfad<br>
-
+<img src="images/qqd.jpg"  border="0" />
 lazy<br>
-<img class="lazy" data-src="images/qqd.jpg" src="" border="0" />
+<img class="lazy" data-original="images/qqd.jpg" src=""  border="0" />
 lazy<br>
 adfadfad<br>
 adfadfad<br>
