--- a/index.html
+++ b/index.html
@@ -1006,21 +1006,44 @@ adfadsfdfefadfe<br>
 
 
 <div class="page" id="upheader">
-<div class="header pad"><span class="l-area"><img src="images/comment-black.png" /><span style="display:inline-block;padding:2px;background:#f00;font-size:12px;line-height:14px;margin-bottom:5px;">1</span></span></span><span class="r-area">B</span><span class="header-namea">上方選單按鈕</span></div>
+<div class="header pad"><span class="l-area"><img src="images/comment-black.png" /><span class="tip"><span class="tipnums">1</span></span></span><span class="r-area">B<span class="tip"><span class="tipnums">1</span></span></span><span class="header-namea">上方選單按鈕</span>
+<ul class="nav-5">
+      <li><span style="padding:6px 10px;">About Us</span></li>
+      <li><span>Our Productsadfsdfee</span></li>
+      <li><span>FAQs</span></li>
+      <li><span>Contact</span></li>
+      <li><span>Login</span></li>
+   </ul><div class="clear"></div>
+</div>
 <div class="content" style="background:#eee;">
 adfija
 adfiajdsfie
 asdfei
+<p>
+<a href="javascript:RMC.changepage('upheaderimg');">選單加入圖片</a>
+</p>
 </div>
+<div class="footer">adsf</div>
 </div>
 
 <div class="page" id="upheaderimg">
-<div class="header"><span class="l-area">A</span><span class="header-namea">上方選單圖片按鈕</span></div>
+<div class="header pad"><span class="l-area">A</span><span class="header-namea">上方選單圖片按鈕</span>
+<ul class="nav-2">
+      <li><a href="#"><img src="images/comment-black.png" /><br>功能介紹</a></li>
+      <li><a href="#">促銷活動</a></li>
+   </ul><div class="clear"></div>
+</div>
 <div class="content" style="background:#eee;">
 adfija
 adfiajdsfie
 asdfei
+<a href="javascript:RMC.backpage();">返回 </a>
 </div>
+<div class="footer nav"><ul class="nav-3">
+       <li><a href="#"><img src="images/comment-black.png" /><br>About Us</a></li>
+      <li><a href="#">Login</a></li>
+      <li><a href="#">Login</a></li>
+   </ul><div class="clear"></div></div>
 </div>
 </body>
 </html>
