--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@ function GoUrl(url) {
 </head>
 <body>
 <div id="pageoverlay"></div>
+<div id="menu"><div class="menu-con"><div>測試一下</div><div>測試一下3</div><div>測試一下6</div></div></div>
 <div class="page" id="main">
 <div class="header">第一頁</div>
 <div class="content" style="background:url(img/logo.png);-webkit-background-size:cover;   -moz-background-size:cover;   -o-background-size:cover;   background-size:cover">
@@ -397,6 +398,10 @@ adfadf<br>
 
 <p>
 <a href="scroll.html">選單初始設定</a>
+</p>
+
+<p>
+<a href="javascript:RMC.changepage('menu_left');">左側共同選單</a>
 </p>
 
 <br>
@@ -1045,5 +1050,26 @@ asdfei
       <li><a href="#">Login</a></li>
    </ul><div class="clear"></div></div>
 </div>
+
+<div class="page" id="menu_left">
+<div class="header pad"><span class="l-area"><img src="css/images/b/01-2.png" tap="RMC.showMenu();"></span><span class="header-namea">左側功能選單</span>
+<ul class="nav-2">
+      <li><span>asd</span></li>
+      <li><span>促銷活動</span></li>
+   </ul><div class="clear"></div>
+</div>
+<div class="content" style="background:#eee;">
+adfija
+adfiajdsfie
+asdfei
+<a href="javascript:RMC.backpage();">返回 </a>
+</div>
+<div class="footer nav"><ul class="nav-3">
+       <li><a href="#"><img src="images/comment-black.png" /><br>About Us</a></li>
+      <li><a href="#"><img src="images/comment-black.png" /><br>Login</a></li>
+      <li><a href="#"><img src="images/comment-black.png" /><br>Login</a></li>
+   </ul><div class="clear"></div></div>
+</div>
+
 </body>
 </html>
