--- a/index.html
+++ b/index.html
@@ -415,6 +415,9 @@ adfadf<br>
 <a href="load.html">開始載入時</a>
 </p>
 
+<p>
+<a href="trach.html">垃圾清運</a>
+</p>
 
 <p>
 <a href="javascript:GoUrl('gallery.html');">圖片測試</a>
