--- a/index.html
+++ b/index.html
@@ -1097,8 +1097,8 @@ asdfei
 <div class="header">圖片移動測試</div>
 <div class="content">
 <ul class="gallery">
-<li><img src="img/gallery/256.jpg" /></li>
-<li><img src="img/gallery/257.jpg" /></li>
+<li><img src="img/gallery/256.jpg" tap="RMC.runGallery('mygallery',this)" /></li>
+<li><img src="img/gallery/257.jpg" tap="RMC.runGallery('mygallery',this)" /></li>
 </ul>
 </div>
 </div>
