--- a/index.html
+++ b/index.html
@@ -1097,8 +1097,21 @@ asdfei
 <div class="header">圖片移動測試</div>
 <div class="content">
 <ul class="gallery">
-<li><span><img src="img/gallery/256.jpg" tap="RMC.runGallery('mygallery',this)" /></span></li>
-<li><span><img src="img/gallery/257.jpg" tap="RMC.runGallery('mygallery',this)" /></span></li>
+<li><span><img src="img/gallery/53.jpg" tap="RMC.runGallery('mygallery',this)" alt="測試" /><label class="txt">測試dsdf</label></span></li>
+<li><span><img src="img/gallery/54.jpg" tap="RMC.runGallery('mygallery',this)" alt="測試" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/55.jpg" tap="RMC.runGallery('mygallery',this)" alt="測試" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/57.jpg" tap="RMC.runGallery('mygallery',this)" alt="測試" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/58.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/59.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/2.jpg" tap="RMC.runGallery('mygallery',this)" alt="測試" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/60.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試adfasdfe</label></span></li>
+<li><span><img src="img/gallery/61.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/62.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試測試測試測試測試測試測試測試</label></span></li>
+<li><span><img src="img/gallery/63.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試sdfef測試</label></span></li>
+<li><span><img src="img/gallery/64.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/65.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/256.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試</label></span></li>
+<li><span><img src="img/gallery/257.jpg" tap="RMC.runGallery('mygallery',this)" /><label class="txt">測試</label></span></li>
 </ul>
 </div>
 </div>
